--- a/.teamcity.yml
+++ b/.teamcity.yml
@@ -8,3 +8,6 @@ jobs:
         tasks: build
         use-gradle-wrapper: 'true'
     enable-dependency-cache: true
+    steps:
+      - type: script
+        script-content: echo "hi!"
